# Pawn-MC

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/rvdjv/pawnmc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  pawnc_jni.cpp
app/src/main/java/com/rvdjv/pawnmc/: CompileError.kt  CompileResult.kt  CompilerConfig.kt  MainActivity.kt  PawnCompiler.kt  SettingsActivity.kt
app/src/main/res/color/: switch_thumb_color.xml  switch_track_color.xml  text_input_stroke_color.xml
app/src/main/res/drawable/: bg_badge.xml  bg_button_gradient.xml  bg_card.xml  bg_card_header.xml  bg_header_gradient.xml  bg_input.xml  bg_status_dot.xml  bg_terminal.xml  divider.xml  ic_add.xml  ic_bug.xml  ic_compile.xml  ic_delete.xml  ic_file.xml  ic_folder_open.xml  ic_play.xml  ic_settings.xml  ic_speed.xml  ic_terminal.xml  ripple_outlined.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  item_include_path.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/rvdjv/pawnmc/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
